--- a/src/60-kotac.tex
+++ b/src/60-kotac.tex
@@ -121,7 +121,7 @@ A value can be either an aligned local value $\lvalue_a$, a non-aligned local va
 
 Aligned local values can be either a data value $\dcOf{\dc}{\overline\lvalue_a}$, in which $\dc$ is a data constructor and $\overline{\lvalue_a}$ are aligned local value arguments, or an aligned function value $\funvalue_a$. Non-aligned local values can be either a data value $\dcOf{\dc}{\overline\lvalue_n}$, in which $\dc$ is a data constructor and $\overline{\lvalue_n}$ are non-aligned local value arguments, or a non-aligned function value $\funvalue_n$.
 
-An aligned function value $\funvalue_a$ can be an aligned built-in function $\bname_a$, a declared aligned function $\fname_a$ or an anonymous aligned function value $ (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\e_a\}\}}$, where $\overline{\xname}$ are variable names for the formal parameters, $\e_a$ is the body of the function and $\name$ is a \textit{tag} that uniquely identifies the function and doesn't occours in the source program. A non-aligned function value $\funvalue_n$ can be a non-aligned built-in function $\bname_n$ (e.g. a pure mathematical or logical function), a declare non-aligned function $\fname_n$ or an anonymous non-aligned function value $(\overline{\xname}) \; \ftoSym \{ \e_n \}$, where $\overline{\xname}$ are variable names for the formal parameters and $\e_n$ is the body of the function.
+An aligned function value $\funvalue_a$ can be an aligned built-in function $\bname_a$ (e.g. nbrsense, which returns a field of the distances from the neighbours, or maxhood, which returns the maximum value in the argument field), a declared aligned function $\fname_a$ or an anonymous aligned function value $ (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\e_a\}\}}$, where $\overline{\xname}$ are variable names for the formal parameters, $\e_a$ is the body of the function and $\name$ is a \textit{tag} that uniquely identifies the function and doesn't occours in the source program. A non-aligned function value $\funvalue_n$ can be a non-aligned built-in function $\bname_n$ (e.g. a temperature sensor or a pure mathematical or logical function), a declare non-aligned function $\fname_n$ or an anonymous non-aligned function value $(\overline{\xname}) \; \ftoSym \{ \e_n \}$, where $\overline{\xname}$ are variable names for the formal parameters and $\e_n$ is the body of the function.
 
 \begin{figure}[!t]{
  \scalebox{0.85}{
@@ -259,7 +259,7 @@ An aligned function value $\funvalue_a$ can be an aligned built-in function $\bn
 \begin{array}{c}
   \bsopsem{\deviceId}{\piIofOv{\Trees}}{\senstate}{\overline{\e},\e}{\overline{\vtree},\vtree}
   \qquad \bname_n = \vrootOf{\vtree}
-  \qquad \anyvalue=\builtinop{\bname_n}{\correction{\deviceId}}{}(\vrootOf{\overline{\vtree}})
+  \qquad \anyvalue=\builtinop{\bname_n}{\correction{\deviceId}}{\senstate}(\vrootOf{\overline{\vtree}})
 \end{array}
  }{
 \bsopsem{\deviceId}{\Trees}{\senstate}{\e(\overline{\e})}{\mkvt{\anyvalue}{\overline{\vtree},\vtree}}
@@ -272,7 +272,7 @@ An aligned function value $\funvalue_a$ can be an aligned built-in function $\bn
   \bsopsem{\deviceId}{\piIofOv{\Trees}}{\senstate}{\overline{\e},\e}{\overline{\vtree},\vtree} \qquad 
   \funvalue=\vrootOf{\vtree} \mbox{is non-aligned and not a built-in} \qquad
 \\
-  \bsopsem{\deviceId}{\emptyseq}{\emptyseq}{\applySubstitution{\body{\funvalue}}{\substitution{\args{\funvalue}}{\vrootOf{\overline{\vtree}}}}}{\vtree'}
+  \bsopsem{\deviceId}{\emptyseq}{\senstate}{\applySubstitution{\body{\funvalue}}{\substitution{\args{\funvalue}}{\vrootOf{\overline{\vtree}}}}}{\vtree'}
 \end{array}
  }{
 \bsopsem{\deviceId}{\Trees}{\senstate}{\e(\overline{\e})}{\mkvt{\vrootOf{\vtree'}}{\overline{\vtree},\vtree}}
@@ -322,9 +322,9 @@ An aligned function value $\funvalue_a$ can be an aligned built-in function $\bn
  \caption{Big-step operational semantics of \FKotac{}.} \label{fig:kotacSemantics}
 \end{figure}
 
-Figure \ref{fig:kotacSemantics} shows the operational semantics of the syntax. It follows the same notation of the field calculus semantics and uses the same auxiliary functions. Rules \ruleNameSize{[E-LOC]} e \ruleNameSize{[E-FLD]} define the evaluation of local values (aligned or non-aligned) and neighbouring values, both producing a value-tree with no subtrees, with a domain restriction to the aligned devices in case of neighbouring fields. Rules \ruleNameSize{[E-BA-APP]} and \ruleNameSize{[E-DA-APP]} model the application of aligned built-in and aligned user defined (or anonymous) functions, the former based on a function different for each built-in and the latter by executing the body of the function. Rules \ruleNameSize{[E-BN-APP]} and \ruleNameSize{[E-DN-APP]} model the application of non-aligned built-in and non-aligned user defined (or anonymous) functions, those rules are not present in the field calculus semantics. In the former the root of the value-tree is computed by a function $\builtinop{\bname_n}{\correction{\deviceId}}{}$ not dependent on the environement or sensor state and different for each built-in. In the latter the root is computed by executing the body of the function $\funvalue$ (with an empty value-tree environment and sensor state) and discarding its computed sub-value-tree, except for the root which its the root of the new value-tree. Rule \ruleNameSize{[E-NBR]} models the evaluation of $\mathtt{nbr}$-expressions, by extracting from the value-tree environment the neighbouring values to build a neighbouring field, and computing the expressions $\e$ for the new value of the executing device. Rule \ruleNameSize{[E-REP]} models the evauation of $\mathtt{rep}$-expressions, by extracting from the value-tree environemtn the last computed value for the new evaluation of $\e$. Rule \ruleNameSize{[E-SHARE]} models the evaluation of $\mathtt{share}$-expressions, by constructing a field of the last computing values as the argument $\xname$ for the evaluation of $\e_2$ and using $\e_1$ as the initial value of the executing device.
+Figure \ref{fig:kotacSemantics} shows the operational semantics of the syntax. It follows the same notation of the field calculus semantics and uses the same auxiliary functions. Rules \ruleNameSize{[E-LOC]} e \ruleNameSize{[E-FLD]} define the evaluation of local values (aligned or non-aligned) and neighbouring values, both producing a value-tree with no subtrees, with a domain restriction to the aligned devices in case of neighbouring fields. Rules \ruleNameSize{[E-BA-APP]} and \ruleNameSize{[E-DA-APP]} model the application of aligned built-in and aligned user defined (or anonymous) functions, the former based on a function different for each built-in and the latter by executing the body of the function. Rules \ruleNameSize{[E-BN-APP]} and \ruleNameSize{[E-DN-APP]} model the application of non-aligned built-in and non-aligned user defined (or anonymous) functions, those rules are not present in the field calculus semantics. In the former the root of the value-tree is computed by a function $\builtinop{\bname_n}{\correction{\deviceId}}{\senstate}$ not dependent on the environement or sensor state and different for each built-in. In the latter the root is computed by executing the body of the function $\funvalue$ with an empty value-tree environment and discarding its computed sub-value-tree, except for the root which its the root of the new value-tree. Rule \ruleNameSize{[E-NBR]} models the evaluation of $\mathtt{nbr}$-expressions, by extracting from the value-tree environment the neighbouring values to build a neighbouring field, and computing the expressions $\e$ for the new value of the executing device. Rule \ruleNameSize{[E-REP]} models the evauation of $\mathtt{rep}$-expressions, by extracting from the value-tree environemtn the last computed value for the new evaluation of $\e$. Rule \ruleNameSize{[E-SHARE]} models the evaluation of $\mathtt{share}$-expressions, by constructing a field of the last computing values as the argument $\xname$ for the evaluation of $\e_2$ and using $\e_1$ as the initial value of the executing device.
 
-Its important to note that a non-aligned function $\fname_n$ can be called for example with an aligned anonymous functions $\name$ as parameters according to the syntax and semantics. If the function $\name$ is then called inside the body of $\fname_n$ it will not have the expected aligned behavior. In order to avoid this situation typing rules must enforce that only non-aligned local value can be passed as arguments of non-aligned functions (either declared or anonymous).
+It's important to note that a non-aligned function $\fname_n$ can be called for example with an aligned anonymous functions $\name$ as parameters according to the syntax and semantics. If the function $\name$ is then called inside the body of $\fname_n$ it will not have the expected aligned behavior. In order to avoid this situation typing rules must enforce that only non-aligned local value can be passed as arguments of non-aligned functions (either declared or anonymous).
 
 \begin{figure}[!t]{
  $\begin{array}{l}
