update fkotac syntax

--- a/macrosMain.tex
+++ b/macrosMain.tex
@@ -44,17 +44,25 @@
 
 \newcommand{\PROGRAM}{\mathtt{P}}
 \newcommand{\FUNCTION}{\mathtt{F}}
+\newcommand{\AFUNCTION}{\mathtt{aF}}
+\newcommand{\SFUNCTION}{\mathtt{sF}}
 \newcommand{\IMPORT}{\mathtt{I}}
 
 \newcommand{\main}{\mathtt{main}}
 \newcommand{\e}{\mathtt{e}}
+\newcommand{\aexp}{\mathtt{ae}}
+\newcommand{\sexp}{\mathtt{se}}
 \newcommand{\s}{\mathtt{s}}
 \newcommand{\emain}{\e_{\main}}
 \newcommand{\fname}{\mathtt{d}}
+\newcommand{\afname}{\mathtt{ad}}
+\newcommand{\sfname}{\mathtt{sd}}
 \newcommand{\xname}{\mathtt{x}}
 \newcommand{\yname}{\mathtt{y}}
 \newcommand{\zname}{\mathtt{z}}
 \newcommand{\bname}{\mathtt{b}}
+\newcommand{\abname}{\mathtt{ab}}
+\newcommand{\sbname}{\mathtt{sb}}
 \newcommand{\oname}{\mathtt{o}}
 \newcommand{\ofname}{\mathtt{g}}
 \newcommand{\iname}{\mathtt{m}}
@@ -63,8 +71,12 @@
 
 \newcommand{\anyvalue}{\mathtt{v}}
 \newcommand{\lvalue}{\ell}
+\newcommand{\alvalue}{a\ell}
+\newcommand{\slvalue}{s\ell}
 \newcommand{\fvalue}{\phi}
 \newcommand{\funvalue}{\mathtt{f}}
+\newcommand{\afunvalue}{\mathtt{sf}}
+\newcommand{\sfunvalue}{\mathtt{af}}
 \newcommand{\svalue}{\mathtt{s}}
 \newcommand{\snvalue}{\mathtt{r}}
 \newcommand{\truevalue}{\mathtt{True}}
