--- a/src/60-kotac.tex
+++ b/src/60-kotac.tex
@@ -71,39 +71,39 @@ Both $\mathtt{ValueTree}$ and $\mathtt{ValueEnvironment}$ are not designed to be
 
 The $\mathtt{ConcreteAggregateContext}$ contains then a field named $\mathtt{localTree}$ which is a $\mathtt{ValueTree}$ in which are stored the data for the local interactions, i.e. the rep operator. Another field named $\mathtt{neighboringTree}$ is a $\mathtt{ValueTree}$ in which are stored the data for the neighbouring interactions, i.e. the share and nbr operators, this tree will be sent to the neighbours. Finally a field named $\mathtt{neighboringEnvironment}$ is a $\mathtt{ValueEnvironment}$ holding all the last $\mathtt{ValueTree}$s sent by the neighbours.
 
-\section{\Kotac semantics}
+\section{\FKotac semantics}
 
 \begin{figure}[t]
 \centering
 \centerline{$
 \begin{array}{l@{\hspace{1mm}}c@{\hspace{1mm}}l@{\hspace{-8mm}}r}
-        \PROGRAM & \BNFcce & \overline{\FUNCTION_n} \; \overline {\FUNCTION_a} \; \e_a
+        \PROGRAM & \BNFcce & \overline{\SFUNCTION} \; \overline {\AFUNCTION} \; \aexp
                                                                                                                                                                                                         &   {\footnotesize \mbox{program}} \\[3pt]
-        \FUNCTION_a & \BNFcce &  \funK \; \fname_a (\overline{\xname}) \; \{ \alignK(\fname_a){\{\e_a\}} \}
+        \AFUNCTION & \BNFcce &  \funK \; \afname (\overline{\xname}) \; \{ \alignK(\afname){\{\aexp\}} \}
                                                                                                                                                                                                         &   {\footnotesize \mbox{aligned function declaration}} \\[3pt]
-        \FUNCTION_n & \BNFcce &  \funK \; \fname_n (\overline{\xname}) \; \{ \e_n \}
-                                                                                                                                                                                                        &   {\footnotesize \mbox{non-aligned function declaration}} \\[3pt]
-        \e_a & \BNFcce & \xname \, \BNFmid \, \anyvalue \, \BNFmid \, \e_a(\overline{\e_a}) \, \BNFmid \, \repK(\e_a)\{ (\xname) \ftoSym \e_a \} \, \BNFmid \, \nbrK\{\e_a\} \, \BNFmid \,
+        \SFUNCTION & \BNFcce &  \funK \; \sfname (\overline{\xname}) \; \{ \sexp \}
+                                                                                                                                                                                                        &   {\footnotesize \mbox{standard function declaration}} \\[3pt]
+        \aexp & \BNFcce & \xname \, \BNFmid \, \anyvalue \, \BNFmid \, \aexp(\overline{\aexp}) \, \BNFmid \, \repK(\aexp)\{ (\xname) \ftoSym \aexp \} \, \BNFmid \, \nbrK\{\aexp\} \, \BNFmid \,
                                                                                                                                                                                                         &   {\footnotesize \mbox{aligned expression}} \\
-        && \shareK(\e_a)\{(\xname) \ftoSym \e_a \} \\[3pt]
-        \e_n & \BNFcce & \xname \, \BNFmid \, \lvalue_n \, \BNFmid \, \e_n(\overline{\e_n})
-                                                                                                                                                                                                        &   {\footnotesize \mbox{non-aligned expression}} \\[3pt]
+        && \shareK(\aexp)\{(\xname) \ftoSym \aexp \} \\[3pt]
+        \sexp & \BNFcce & \xname \, \BNFmid \, \slvalue \, \BNFmid \, \sexp(\overline{\sexp})
+                                                                                                                                                                                                        &   {\footnotesize \mbox{standard expression}} \\[3pt]
         \hline \\[-6pt]
-                \anyvalue & \BNFcce &  \lvalue_a \; \BNFmid \; \lvalue_n \; \BNFmid \; \fvalue
+                \anyvalue & \BNFcce &  \alvalue \; \BNFmid \; \slvalue \; \BNFmid \; \fvalue
                 &{ \mbox{\footnotesize value}}
                 \\[3pt]
-              \lvalue_a & \BNFcce &  \dcOf{\dc}{\overline\lvalue_a} \; \BNFmid \; \funvalue_a
+              \alvalue & \BNFcce &  \dcOf{\dc}{\overline\alvalue} \; \BNFmid \; \afunvalue
                 &{ \mbox{\footnotesize aligned local value}}
                 \\[3pt]
-              \lvalue_n & \BNFcce &  \dcOf{\dc}{\overline\lvalue_n} \; \BNFmid \; \funvalue_n
-                &{ \mbox{\footnotesize non-aligned local value}}
+              \slvalue & \BNFcce &  \dcOf{\dc}{\overline\slvalue} \; \BNFmid \; \sfunvalue
+                &{ \mbox{\footnotesize standard local value}}
                 \\[3pt]
                 \fvalue & \BNFcce &  \envmap{\overline\deviceId}{\overline\lvalue}
                 &{ \mbox{\footnotesize neighbouring field value}} \\
-        \funvalue_a & \BNFcce & \bname_a \; \BNFmid \; \fname_a \; \BNFmid \; (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\e\}\}}
+        \afunvalue & \BNFcce & \abname \; \BNFmid \; \afname \; \BNFmid \; (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\aexp\}\}}
                                                                                                                                                                                                         &   {\footnotesize\mbox{aligned function value}} \\
-        \funvalue_n & \BNFcce & \bname_n \; \BNFmid \; \fname_n \; \BNFmid \; (\overline{\xname}) \; \ftoSym \{ \e_n \}
-                                                                                                                                                                                                        &   {\footnotesize\mbox{non-aligned function value}} \\
+        \sfunvalue & \BNFcce & \sbname \; \BNFmid \; \sfname \; \BNFmid \; (\overline{\xname}) \; \ftoSym \{ \sexp \}
+                                                                                                                                                                                                        &   {\footnotesize\mbox{standard function value}} \\
 \end{array}
 $
 }
@@ -111,17 +111,17 @@ $
 \label{fig:fkotacsyntax}
 \end{figure}
 
-In order to formalize the semantic of \Kotac{} a subset of it has been considered called \textit{Featherweight \Kotac{} (\FKotac{})}. The syntax of \FKotac is shown in figure \ref{fig:fkotacsyntax}, it focus on the aggregate constructs ignoring the Kotlin specific features. Unlike \FSCAFI, which considers only aggregate functions (which require alignment), in \FKotac has been considered also regular function, i.e. functions that don't require alignment and don't allow to call aggregate functions and aggregate constructs in their body. 
+In order to formalize the semantic of \Kotac{} a subset of it has been considered called \textit{Featherweight \Kotac{} (\FKotac{})}. The syntax of \FKotac is shown in figure \ref{fig:fkotacsyntax}, it focus on the aggregate constructs ignoring the Kotlin specific features. Unlike \FSCAFI, which considers only aggregate functions (which require alignment), in \FKotac has been considered also standard function, i.e. functions that don't require alignment and don't allow to call aggregate functions and aggregate constructs in their body. 
 
-A program $\PROGRAM$ is a sequence of non-aligned function declarations $\overline{\FUNCTION_n}$ followed by a sequence of aligned function declarations $\overline{\FUNCTION_a}$ and followed by a main aligned expression $\e_a$. An aligned function declaration $\FUNCTION_a$ defines a (possibly recursive) aligned function named $\fname_a$, with a sequence of formal parameters $\overline{\xname}$ and a body aligned expression $\e_a$. A non-aligned function declaration $\FUNCTION_n$ defines a (possibly recursive) non aligned function named $\fname_n$ with a sequence of formal parameters $\overline{\xname}$ and a body non-aligned expression $\e_n$. 
+A program $\PROGRAM$ is a sequence of non-aligned function declarations $\overline{\SFUNCTION}$ followed by a sequence of aligned function declarations $\overline{\AFUNCTION}$ and followed by a main aligned expression $\aexp$. An aligned function declaration $\AFUNCTION$ defines a (possibly recursive) aligned function named $\afname$, with a sequence of formal parameters $\overline{\xname}$ and a body aligned expression $\aexp$. A non-aligned function declaration $\SFUNCTION$ defines a (possibly recursive) non aligned function named $\sfname$ with a sequence of formal parameters $\overline{\xname}$ and a body non-aligned expression $\sexp$. 
 
-An aligned expression $\e_a$ can be a variable $\xname$, a value $\anyvalue$, a function application $\e_a(\overline{\e_a})$ where $\e_a$ evaluates to a function $\funvalue_a$ or $\funvalue_n$ and $\overline{\e_a}$ are the arguments, a $\mathtt{rep}$-expression $\repK(\e_a)\{ \e_a \}$ modelling time evolution, a $\mathtt{nbr}$-expression $\nbrK\{\e_a\}$ modelling neighbourhood interaction or a $\mathtt{share}$-expression $\shareK(\e_a)\{(\xname) \ftoSym \e_a \}$ modelling time evolution based on a neighbouring field. A non-aligned expression $\e_n$ can be a variable $\xname$, a non-aligned local value $\lvalue_n$ or a function application $\e_n(\overline{\e_n})$ where $\e_n$ evaluates to a function $\funvalue_n$ and $\overline{\e_n}$ are the arguments.
+An aligned expression $\aexp$ can be a variable $\xname$, a value $\anyvalue$, a function application $\aexp(\overline{\aexp})$ where $\aexp$ evaluates to a function $\afunvalue$ or $\sfunvalue$ and $\overline{\aexp}$ are the arguments, a $\mathtt{rep}$-expression $\repK(\aexp)\{ \aexp \}$ modelling time evolution, a $\mathtt{nbr}$-expression $\nbrK\{\aexp\}$ modelling neighbourhood interaction or a $\mathtt{share}$-expression $\shareK(\aexp)\{(\xname) \ftoSym \aexp \}$ modelling time evolution based on a neighbouring field. A non-aligned expression $\sexp$ can be a variable $\xname$, a non-aligned local value $\slvalue$ or a function application $\sexp(\overline{\sexp})$ where $\sexp$ evaluates to a function $\sfunvalue$ and $\overline{\sexp}$ are the arguments.
 
-A value can be either an aligned local value $\lvalue_a$, a non-aligned local value $\lvalue_n$ or a neighbouring field value $\fvalue$. Neighbouring field values doesn't appear in the source code but can only be computed dynamically, usally by built-in operators like $\mathtt{nbr}$ or $\mathtt{share}$.
+A value can be either an aligned local value $\alvalue$, a non-aligned local value $\slvalue$ or a neighbouring field value $\fvalue$. Neighbouring field values doesn't appear in the source code but can only be computed dynamically, usally by built-in operators like $\mathtt{nbr}$ or $\mathtt{share}$.
 
-Aligned local values can be either a data value $\dcOf{\dc}{\overline\lvalue_a}$, in which $\dc$ is a data constructor and $\overline{\lvalue_a}$ are aligned local value arguments, or an aligned function value $\funvalue_a$. Non-aligned local values can be either a data value $\dcOf{\dc}{\overline\lvalue_n}$, in which $\dc$ is a data constructor and $\overline{\lvalue_n}$ are non-aligned local value arguments, or a non-aligned function value $\funvalue_n$.
+Aligned local values can be either a data value $\dcOf{\dc}{\overline\alvalue}$, in which $\dc$ is a data constructor and $\overline{\alvalue}$ are aligned local value arguments, or an aligned function value $\afunvalue$. Non-aligned local values can be either a data value $\dcOf{\dc}{\overline\slvalue}$, in which $\dc$ is a data constructor and $\overline{\slvalue}$ are non-aligned local value arguments, or a non-aligned function value $\sfunvalue$.
 
-An aligned function value $\funvalue_a$ can be an aligned built-in function $\bname_a$ (e.g. nbrsense, which returns a field of the distances from the neighbours, or maxhood, which returns the maximum value in the argument field), a declared aligned function $\fname_a$ or an anonymous aligned function value $ (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\e_a\}\}}$, where $\overline{\xname}$ are variable names for the formal parameters, $\e_a$ is the body of the function and $\name$ is a \textit{tag} that uniquely identifies the function and doesn't occours in the source program. A non-aligned function value $\funvalue_n$ can be a non-aligned built-in function $\bname_n$ (e.g. a temperature sensor or a pure mathematical or logical function), a declare non-aligned function $\fname_n$ or an anonymous non-aligned function value $(\overline{\xname}) \; \ftoSym \{ \e_n \}$, where $\overline{\xname}$ are variable names for the formal parameters and $\e_n$ is the body of the function.
+An aligned function value $\afunvalue$ can be an aligned built-in function $\abname$ (e.g. nbrsense, which returns a field of the distances from the neighbours, or maxhood, which returns the maximum value in the argument field), a declared aligned function $\afname$ or an anonymous aligned function value $ (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\aexp\}\}}$, where $\overline{\xname}$ are variable names for the formal parameters, $\aexp$ is the body of the function and $\name$ is a \textit{tag} that uniquely identifies the function and doesn't occours in the source program. A non-aligned function value $\sfunvalue$ can be a non-aligned built-in function $\sbname$ (e.g. a temperature sensor or a pure mathematical or logical function), a declare non-aligned function $\sfname$ or an anonymous non-aligned function value $(\overline{\xname}) \; \ftoSym \{ \sexp \}$, where $\overline{\xname}$ are variable names for the formal parameters and $\sexp$ is the body of the function.
 
 \begin{figure}[!t]{
  \scalebox{0.85}{
@@ -235,8 +235,8 @@ An aligned function value $\funvalue_a$ can be an aligned built-in function $\bn
 \surfaceTyping{E-BA-APP}{  \quad
 \begin{array}{c}
   \bsopsem{\deviceId}{\piIofOv{\Trees}}{\senstate}{\overline{\e},\e}{\overline{\vtree},\vtree}
-  \qquad \bname_a = \vrootOf{\vtree}
-  \qquad \anyvalue=\builtinop{\bname_a}{\correction{\deviceId}}{\piBof{\bname_a}{\Trees},\senstate}(\vrootOf{\overline{\vtree}})
+  \qquad \abname = \vrootOf{\vtree}
+  \qquad \anyvalue=\builtinop{\abname}{\correction{\deviceId}}{\piBof{\abname}{\Trees},\senstate}(\vrootOf{\overline{\vtree}})
 \end{array}
  }{
 \bsopsem{\deviceId}{\Trees}{\senstate}{\e(\overline{\e})}{\mkvt{\anyvalue}{\overline{\vtree},\vtree}}
@@ -255,11 +255,11 @@ An aligned function value $\funvalue_a$ can be an aligned built-in function $\bn
 \bsopsem{\deviceId}{\Trees}{\senstate}{\e(\overline{\e})}{\mkvt{\vrootOf{\vtree'}}{\overline{\vtree},\vtree,\vtree'}}
 }
 \skiptransition\\[-6pt]
-\surfaceTyping{E-BN-APP}{  \quad
+\surfaceTyping{E-BS-APP}{  \quad
 \begin{array}{c}
   \bsopsem{\deviceId}{\piIofOv{\Trees}}{\senstate}{\overline{\e},\e}{\overline{\vtree},\vtree}
-  \qquad \bname_n = \vrootOf{\vtree}
-  \qquad \anyvalue=\builtinop{\bname_n}{\correction{\deviceId}}{\senstate}(\vrootOf{\overline{\vtree}})
+  \qquad \sbname = \vrootOf{\vtree}
+  \qquad \anyvalue=\builtinop{\sbname}{\correction{\deviceId}}{\senstate}(\vrootOf{\overline{\vtree}})
 \end{array}
  }{
 \bsopsem{\deviceId}{\Trees}{\senstate}{\e(\overline{\e})}{\mkvt{\anyvalue}{\overline{\vtree},\vtree}}
@@ -267,10 +267,10 @@ An aligned function value $\funvalue_a$ can be an aligned built-in function $\bn
 %
 \skiptransition\\[-6pt]
 %
-\surfaceTyping{E-DN-APP}{ \quad
+\surfaceTyping{E-DS-APP}{ \quad
 \begin{array}{c}
   \bsopsem{\deviceId}{\piIofOv{\Trees}}{\senstate}{\overline{\e},\e}{\overline{\vtree},\vtree} \qquad 
-  \funvalue=\vrootOf{\vtree} \mbox{is non-aligned and not a built-in} \qquad
+  \funvalue=\vrootOf{\vtree} \mbox{is standard and not a built-in} \qquad
 \\
   \bsopsem{\deviceId}{\emptyseq}{\senstate}{\applySubstitution{\body{\funvalue}}{\substitution{\args{\funvalue}}{\vrootOf{\overline{\vtree}}}}}{\vtree'}
 \end{array}
@@ -322,9 +322,9 @@ An aligned function value $\funvalue_a$ can be an aligned built-in function $\bn
  \caption{Big-step operational semantics of \FKotac{}.} \label{fig:kotacSemantics}
 \end{figure}
 
-Figure \ref{fig:kotacSemantics} shows the operational semantics of the syntax. It follows the same notation of the field calculus semantics and uses the same auxiliary functions. Rules \ruleNameSize{[E-LOC]} e \ruleNameSize{[E-FLD]} define the evaluation of local values (aligned or non-aligned) and neighbouring values, both producing a value-tree with no subtrees, with a domain restriction to the aligned devices in case of neighbouring fields. Rules \ruleNameSize{[E-BA-APP]} and \ruleNameSize{[E-DA-APP]} model the application of aligned built-in and aligned user defined (or anonymous) functions, the former based on a function different for each built-in and the latter by executing the body of the function. Rules \ruleNameSize{[E-BN-APP]} and \ruleNameSize{[E-DN-APP]} model the application of non-aligned built-in and non-aligned user defined (or anonymous) functions, those rules are not present in the field calculus semantics. In the former the root of the value-tree is computed by a function $\builtinop{\bname_n}{\correction{\deviceId}}{\senstate}$ not dependent on the environement or sensor state and different for each built-in. In the latter the root is computed by executing the body of the function $\funvalue$ with an empty value-tree environment and discarding its computed sub-value-tree, except for the root which its the root of the new value-tree. Rule \ruleNameSize{[E-NBR]} models the evaluation of $\mathtt{nbr}$-expressions, by extracting from the value-tree environment the neighbouring values to build a neighbouring field, and computing the expressions $\e$ for the new value of the executing device. Rule \ruleNameSize{[E-REP]} models the evauation of $\mathtt{rep}$-expressions, by extracting from the value-tree environemtn the last computed value for the new evaluation of $\e$. Rule \ruleNameSize{[E-SHARE]} models the evaluation of $\mathtt{share}$-expressions, by constructing a field of the last computing values as the argument $\xname$ for the evaluation of $\e_2$ and using $\e_1$ as the initial value of the executing device.
+Figure \ref{fig:kotacSemantics} shows the operational semantics of the syntax. It follows the same notation of the field calculus semantics and uses the same auxiliary functions. Rules \ruleNameSize{[E-LOC]} e \ruleNameSize{[E-FLD]} define the evaluation of local values (aligned or non-aligned) and neighbouring values, both producing a value-tree with no subtrees, with a domain restriction to the aligned devices in case of neighbouring fields. Rules \ruleNameSize{[E-BA-APP]} and \ruleNameSize{[E-DA-APP]} model the application of aligned built-in and aligned user defined (or anonymous) functions, the former based on a function different for each built-in and the latter by executing the body of the function. Rules \ruleNameSize{[E-BS-APP]} and \ruleNameSize{[E-DS-APP]} model the application of non-aligned built-in and non-aligned user defined (or anonymous) functions, those rules are not present in the field calculus semantics. In the former the root of the value-tree is computed by a function $\builtinop{\sbname}{\correction{\deviceId}}{\senstate}$ not dependent on the environement or sensor state and different for each built-in. In the latter the root is computed by executing the body of the function $\funvalue$ with an empty value-tree environment and discarding its computed sub-value-tree, except for the root which its the root of the new value-tree. Rule \ruleNameSize{[E-NBR]} models the evaluation of $\mathtt{nbr}$-expressions, by extracting from the value-tree environment the neighbouring values to build a neighbouring field, and computing the expressions $\e$ for the new value of the executing device. Rule \ruleNameSize{[E-REP]} models the evauation of $\mathtt{rep}$-expressions, by extracting from the value-tree environemtn the last computed value for the new evaluation of $\e$. Rule \ruleNameSize{[E-SHARE]} models the evaluation of $\mathtt{share}$-expressions, by constructing a field of the last computing values as the argument $\xname$ for the evaluation of $\e_2$ and using $\e_1$ as the initial value of the executing device.
 
-It's important to note that a non-aligned function $\fname_n$ can be called for example with an aligned anonymous functions $\name$ as parameters according to the syntax and semantics. If the function $\name$ is then called inside the body of $\fname_n$ it will not have the expected aligned behavior. In order to avoid this situation typing rules must enforce that only non-aligned local value can be passed as arguments of non-aligned functions (either declared or anonymous).
+It's important to note that a standard function $\sfname$ can be called for example with an aligned anonymous functions $\name$ as parameters according to the syntax and semantics. If the function $\name$ is then called inside the body of $\sfname$ it will not have the expected aligned behavior. In order to avoid this situation typing rules must enforce that only non-aligned local value can be passed as arguments of non-aligned functions (either declared or anonymous).
 
 \begin{figure}[!t]{
  $\begin{array}{l}
