semantica con funzioni non-aligned al first-order

--- a/src/60-kotac.tex
+++ b/src/60-kotac.tex
@@ -77,33 +77,28 @@ The $\mathtt{ConcreteAggregateContext}$ contains then a field named $\mathtt{loc
 \centering
 \centerline{$
 \begin{array}{l@{\hspace{1mm}}c@{\hspace{1mm}}l@{\hspace{-8mm}}r}
-        \PROGRAM & \BNFcce & \overline{\SFUNCTION} \; \overline {\AFUNCTION} \; \aexp
+        \PROGRAM & \BNFcce & \overline{\FUNCTION} \; \e
                                                                                                                                                                                                         &   {\footnotesize \mbox{program}} \\[3pt]
-        \AFUNCTION & \BNFcce &  \funK \; \afname (\overline{\xname}) \; \{ \alignK(\afname){\{\aexp\}} \}
+        \FUNCTION & \BNFcce &  \AFUNCTION \, \BNFmid \, \SFUNCTION
+                                                                                                                                                                                                        &   {\footnotesize \mbox{function declaration}} \\[3pt]
+        \AFUNCTION & \BNFcce &  \funK \; \afname (\overline{\xname}) \; \{ \alignK(\afname){\{\e\}} \}
                                                                                                                                                                                                         &   {\footnotesize \mbox{aligned function declaration}} \\[3pt]
-        \SFUNCTION & \BNFcce &  \funK \; \sfname (\overline{\xname}) \; \{ \sexp \}
+        \SFUNCTION & \BNFcce &  \funK \; \sfname (\overline{\xname}) \; \{ \e \}
                                                                                                                                                                                                         &   {\footnotesize \mbox{standard function declaration}} \\[3pt]
-        \aexp & \BNFcce & \xname \, \BNFmid \, \anyvalue \, \BNFmid \, \aexp(\overline{\aexp}) \, \BNFmid \, \repK(\aexp)\{ (\xname) \ftoSym \aexp \} \, \BNFmid \, \nbrK\{\aexp\} \, \BNFmid \,
-                                                                                                                                                                                                        &   {\footnotesize \mbox{aligned expression}} \\
-        && \shareK(\aexp)\{(\xname) \ftoSym \aexp \} \\[3pt]
-        \sexp & \BNFcce & \xname \, \BNFmid \, \slvalue \, \BNFmid \, \sexp(\overline{\sexp})
-                                                                                                                                                                                                        &   {\footnotesize \mbox{standard expression}} \\[3pt]
+        \e & \BNFcce & \xname \, \BNFmid \, \anyvalue \, \BNFmid \, \e(\overline{\e}) \, \BNFmid \, \sfname(\overline{\e}) \, \BNFmid \, \repK(\e)\{ (\xname) \ftoSym \e \} \, \BNFmid \, \nbrK\{\e\} \, \BNFmid \,
+                                                                                                                                                                                                        &   {\footnotesize \mbox{expression}} \\
+        && \shareK(\e)\{(\xname) \ftoSym \e \} \\[3pt]
         \hline \\[-6pt]
-                \anyvalue & \BNFcce &  \alvalue \; \BNFmid \; \slvalue \; \BNFmid \; \fvalue
+                \anyvalue & \BNFcce &  \lvalue \; \BNFmid \; \fvalue
                 &{ \mbox{\footnotesize value}}
                 \\[3pt]
-              \alvalue & \BNFcce &  \dcOf{\dc}{\overline\alvalue} \; \BNFmid \; \afunvalue
-                &{ \mbox{\footnotesize aligned local value}}
-                \\[3pt]
-              \slvalue & \BNFcce &  \dcOf{\dc}{\overline\slvalue} \; \BNFmid \; \sfunvalue
-                &{ \mbox{\footnotesize standard local value}}
+              \lvalue & \BNFcce &  \dcOf{\dc}{\overline\lvalue} \; \BNFmid \; \funvalue
+                &{ \mbox{\footnotesize local value}}
                 \\[3pt]
                 \fvalue & \BNFcce &  \envmap{\overline\deviceId}{\overline\lvalue}
                 &{ \mbox{\footnotesize neighbouring field value}} \\
-        \afunvalue & \BNFcce & \abname \; \BNFmid \; \afname \; \BNFmid \; (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\aexp\}\}}
-                                                                                                                                                                                                        &   {\footnotesize\mbox{aligned function value}} \\
-        \sfunvalue & \BNFcce & \sbname \; \BNFmid \; \sfname \; \BNFmid \; (\overline{\xname}) \; \ftoSym \{ \sexp \}
-                                                                                                                                                                                                        &   {\footnotesize\mbox{standard function value}} \\
+        \afunvalue & \BNFcce & \bname \; \BNFmid \; \afname \; \BNFmid \; (\overline{\xname}) \; \toSym{\name}{\{\alignK(\name)\{\e\}\}}
+                                                                                                                                                                                                        &   {\footnotesize\mbox{function value}} \\
 \end{array}
 $
 }
